--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,22 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="Ttext">Test text</string>
+    <string name="product_manager">Product Manager</string>
+    <string name="Authorization">Авторизация</string>
+    <string name="go_in">Войти</string>
+    <string name="go_back">Назад</string>
+    <string name="enter_name">Введите имя</string>
+    <string name="enter_password">Введите пароль</string>
+    <string name="enter_password_again">Повторите пароль</string>
+    <string name="go_in_error">Ошибка входа</string>
+    <string name="Registration_2">Зарегистрироваться</string>
+    <string name="Registration_1">Регистрация</string>
+    <string name="Title">Название</string>
+    <string-array name="arrg">
+        <item name="kg">кг.</item>
+        <item name="l">л.</item>
+        <item name="sht">шт.</item>
+    </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
